[package]
name = "VulcanEngine_0"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
log = "0.4.25"
env_logger = "0.6.1"
cgmath = "0.18"
png = "0.17"
pretty_env_logger = "0.5"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "=0.26.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"
varlen = "0.1.2"
varlen_macro = "0.1.3"